# sms-doorman

./: .dockerignore  .gitignore  Dockerfile  build_release.sh  pyproject.toml  run_docker.sh
misc/: build_pyinstaller.py  build_pyinstaller.sh  buildkitd.toml
packaging/: postinst  prerm  sms-doorman.service
src/sms_doorman/: application.py  door_controller.py  main.py  server.py
