[project]
name = "sms-doorman"
version = "0.1.0"
description = "Automation to open a door when you text a phone number"
authors = [
    {name = "Matthew Zhong",email = "matthewzhong@logmethods.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "twilio (>=9.8.8,<10.0.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)"
]

[tool.poetry.scripts]
sms-doorman-ctl = "sms_doorman.door_controller:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
